# postmanLocal

./: .gitignore  KEYBOARD_SHORTCUTS.md  MOCK_SERVER_STATUS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/rules/: backend.mdc
backend/: composer.json  package-lock.json  package.json
backend/bootstrap/: app.php
backend/config/: broadcasting.php  cors.php  files.php  rate-limiter.php  sanctum.php
backend/routes/: admin.php  api.php  channels.php
docs/: ACCESSIBILITY.md  ADDITIONAL_FEATURES.md  API_DOCUMENTATION.md  ARCHITECTURE.md  BACKEND_PERFORMANCE.md  BUILD_GUIDE.md  CODE_QUALITY.md  DATA_SECURITY.md  DESIGN_SYSTEM.md  DEVELOPER_GUIDE.md  ERROR_TRACKING.md  MONITORING.md  PERFORMANCE.md  SECURITY.md  USER_GUIDE.md
public/: mock-service-worker.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_client.rs  commands.rs  main.rs  mock_server.rs  storage.rs
src/__tests__/: apiService.test.ts  diff.test.ts  importExportService.test.ts  openApiParser.test.ts  requestChainService.test.ts  setup.ts  syncService.test.ts  validation.test.ts
src/components/: AppRouter.tsx  MainApp.tsx  MainContentView.tsx
src/config/: onboardingSteps.ts
src/contexts/: AuthContext.tsx  NavigationContext.tsx
src/hooks/: useAsyncOperation.ts  useContextMenu.ts  useDebounce.ts  useDragDrop.ts  useFeatureGate.ts  useKeyboardShortcuts.ts  useOfflineMode.ts  usePerformance.ts  useToast.ts  useUserPreferences.ts  (+5 more)
(+434 files in other folders)
